[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TaskBar.gd" type="Script" id=1]
[ext_resource path="res://Sprites/listIcon.png" type="Texture" id=2]
[ext_resource path="res://Sprites/redMark.png" type="Texture" id=3]
[ext_resource path="res://Sprites/notep1.png" type="Texture" id=4]

[node name="TaskBar" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 72.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkList" type="Sprite" parent="."]
visible = false
position = Vector2( 832, 160 )
texture = ExtResource( 4 )
hframes = 3
frame = 2

[node name="lust" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -64, -124.5 )
scale = Vector2( 0.583334, 0.347222 )
texture = ExtResource( 3 )

[node name="gluttony" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -12, -88 )
scale = Vector2( 1.125, 0.347222 )
texture = ExtResource( 3 )

[node name="greed" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -55, -48 )
scale = Vector2( 0.677084, 0.347222 )
texture = ExtResource( 3 )

[node name="sloth" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -55, -16 )
scale = Vector2( 0.677083, 0.347222 )
texture = ExtResource( 3 )

[node name="wrath" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -52.5, 24 )
scale = Vector2( 0.713542, 0.347222 )
texture = ExtResource( 3 )

[node name="envy" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -65.125, 56 )
scale = Vector2( 0.595052, 0.347222 )
texture = ExtResource( 3 )

[node name="pride" type="Sprite" parent="checkList"]
visible = false
position = Vector2( -64.0001, 96 )
scale = Vector2( 0.610026, 0.347222 )
texture = ExtResource( 3 )
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
